<resources>
    <string name="app_name">MyTimeTracker</string>
    <string name="server_client_id">1076500636273-obid48ohks64dkgh111kasb3voegdset.apps.googleusercontent.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="dialog_name">Name:</string>
    <string name="dialog_description">Description:</string>
    
    <string name="drawer_menu_workspaces">Workspaces</string>
    <string name="drawer_menu_projects">Projects</string>
    <string name="drawer_menu_tasks">Tasks</string>
    <string name="drawer_menu_reports">Reports</string>
    <string name="drawer_menu_friends">Friends</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_logout">Log out</string>


    <!--ProjectInfo-->
    <string name="project_info_name">Name:</string>
    <string name="project_info_description">Description:</string>
    <string name="project_info_workspace">Workspace:</string>
    <string name="project_info_tasks">Tasks:</string>
    <string name="project_info_start">Start date:</string>
    <string name="project_info_end">End date:</string>
    <string name="project_info_duration">Duration:</string>
</resources>
