<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_workspace"
            android:icon="@drawable/workspace"
            android:title="@string/drawer_menu_workspaces" />
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/project"
            android:title="@string/drawer_menu_projects" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/task"
            android:title="@string/drawer_menu_tasks" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings"
            android:title="@string/drawer_menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/drawer_menu_logout" />
    </group>
</menu>
